Added playout cap randomization to self play games

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,23 +4,25 @@
 board_size: 7                 # N x N board for Go Game
 
 # time parameters
-num_iterations: 100            # number of total iterations (Episodes + NN Training + Arena) to play
-num_self_play_episodes: 4   # number of data-generating games to play before training the neural network
-num_arena_episodes: 4        # number of evaluation games to determine which model to keep (new or old)
+num_iterations: 200            # number of total iterations (Episodes + NN Training + Arena) to play
+num_self_play_episodes: 6000   # number of data-generating games to play before training the neural network
+num_arena_episodes: 50        # number of evaluation games to determine which model to keep (new or old)
 num_polling_games: 5          # number of games to play locally while waiting for distributed games (requires enable_distributed_training -> true)
 
 # training type parameters
-load_model: false
-enable_distributed_training: false
+load_model: False
+enable_distributed_training: True
 num_games_per_distributed_batch: 1  # number of games to play before uploading training examples to main server
-num_parallel_games: 7              # number of games for worker server to play in parallel during distributed training
+num_parallel_games: 15              # number of games for worker server to play in parallel during distributed training
 
 # console parameters
-display: 0                    # 0 -> display bar | 1 -> display board
+display: 1                    # 0 -> display bar | 1 -> display board
 
 # MCTS parameters
-num_MCTS_simulations: 200     # number of moves for MCTS to simulate
-temperature_threshold: 8     # number of moves before MCTS picks moves based only on max visit counts (temp = 1 until threshold, then temp = 0)
+num_MCTS_simulations: 300     # number of moves for MCTS to simulate
+num_full_search_sims: 300
+num_fast_search_sims: 50
+temperature_threshold: 10     # number of moves before MCTS picks moves based only on max visit counts (temp = 1 until threshold, then temp = 0)
 acceptance_threshold: 0.54    # percentage of Arena games a new model must win to be accepted
 c_puct: 1.0                   # hyperparameter to control the degree of exploration in MCTS
 
