--- a/config.yaml
+++ b/config.yaml
@@ -5,18 +5,18 @@ board_size: 7                 # N x N board for Go Game
 
 # time parameters
 num_iterations: 200            # number of total iterations (Episodes + NN Training + Arena) to play
-num_self_play_episodes: 6000   # number of data-generating games to play before training the neural network
-num_arena_episodes: 50        # number of evaluation games to determine which model to keep (new or old)
+num_self_play_episodes: 2   # number of data-generating games to play before training the neural network
+num_arena_episodes: 2        # number of evaluation games to determine which model to keep (new or old)
 num_polling_games: 5          # number of games to play locally while waiting for distributed games (requires enable_distributed_training -> true)
 
 # training type parameters
-load_model: False
-enable_distributed_training: True
+load_model: false
+enable_distributed_training: false
 num_games_per_distributed_batch: 1  # number of games to play before uploading training examples to main server
 num_parallel_games: 15              # number of games for worker server to play in parallel during distributed training
 
 # console parameters
-display: 1                    # 0 -> display bar | 1 -> display board
+display: 0                    # 0 -> display bar | 1 -> display board
 
 # MCTS parameters
 num_MCTS_simulations: 300     # number of moves for MCTS to simulate
