--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ board_size: 7                 # N x N board for Go Game
 # time parameters
 num_iterations: 200            # number of total iterations (Episodes + NN Training + Arena) to play
 num_self_play_episodes: 6000   # number of data-generating games to play before training the neural network
-num_arena_episodes: 50        # number of evaluation games to determine which model to keep (new or old)
+num_arena_episodes: 50       # number of evaluation games to determine which model to keep (new or old)
 num_polling_games: 5          # number of games to play locally while waiting for distributed games (requires enable_distributed_training -> true)
 
 # training type parameters
@@ -31,7 +31,10 @@ network_type: RES             # "RES" -> Use resnet | "CNN" -> use convolutional
 optimizer_type: SGD           # "SGD" -> w/ momentum of 0.9 | "Adam" -> w/ weight decay of 5e-4
 max_length_of_queue: 200000   # max number of moves to train neural network with
 max_num_iterations_in_train_example_history: 4  # max number of iterations to train the neural network with
-learning_rate: 0.0001
+learning_rate: 0.0001         # learning rate to use without cosine annealing
+use_cosine_annealing: false    # whether or not to use cosine annealing
+max_learning_rate: 0.001      # maximum learning rate when using cosine annealing
+min_learning_rate: 0.00001    # minimum learning rate when using cosine annealing
 batch_size: 2048
 dropout: 0.0
 epochs: 10
