--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,7 +6,7 @@ board_size: 7                 # N x N board for Go Game
 # time parameters
 num_iterations: 200            # number of total iterations (Episodes + NN Training + Arena) to play
 num_self_play_episodes: 6000   # number of data-generating games to play before training the neural network
-first_iter_num_games: 50      # number of gaes to play during the first iteration
+first_iter_num_games: 50      # number of games to play during the first iteration
 num_arena_episodes: 50       # number of evaluation games to determine which model to keep (new or old)
 num_polling_games: 5          # number of games to play locally while waiting for distributed games (requires enable_distributed_training -> true)
 
@@ -30,7 +30,7 @@ c_puct: 1.0                   # hyperparameter to control the degree of explorat
 # Neural network parameters
 network_type: RES             # "RES" -> Use resnet | "CNN" -> use convolutional neural network
 optimizer_type: SGD           # "SGD" -> w/ momentum of 0.9 | "Adam" -> w/ weight decay of 5e-4
-max_length_of_queue: 200000   # max number of moves to train neural network with
+max_length_of_queue: 5000000   # max number of moves to train neural network with
 max_num_iterations_in_train_example_history: 4  # max number of iterations to train the neural network with
 learning_rate: 0.0001         # learning rate to use without cosine annealing
 use_cosine_annealing: false    # whether or not to use cosine annealing
