--- a/engine/engine_config.yaml
+++ b/engine/engine_config.yaml
@@ -31,7 +31,7 @@ acceptance_threshold: 0.54    # percentage of Arena games a new model must win t
 c_puct: 1.0                   # hyperparameter to control the degree of exploration in MCTS
 
 # Neural network parameters
-network_type: RES             # "RES" -> Use resnet | "CNN" -> use convolutional neural network
+network_type: DEP             # "RES" -> Use resnet | "CNN" -> use convolutional neural network | "DEP" -> deprecated, NN without SENS layer
 optimizer_type: SGD           # "SGD" -> w/ momentum of 0.9 | "Adam" -> w/ weight decay of 5e-4
 max_length_of_queue: 200000   # max number of moves to train neural network with
 max_num_iterations_in_train_example_history: 4  # max number of iterations to train the neural network with
