--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -23,9 +23,7 @@ display: 0                    # 0 -> display bar | 1 -> display board
 debug_mode: false              # enable debug output
 
 # MCTS parameters
-num_MCTS_simulations: 300     # number of moves for MCTS to simulate
-num_full_search_sims: 300
-num_fast_search_sims: 50
+num_full_search_sims: 300     # number of moves for MCTS to simulate
 temperature_threshold: 10     # number of moves before MCTS picks moves based only on max visit counts (temp = 1 until threshold, then temp = 0)
 acceptance_threshold: 0.54    # percentage of Arena games a new model must win to be accepted
 c_puct: 1.5                   # hyperparameter to control the degree of exploration in MCTS
