--- a/engine/engine_config.yaml
+++ b/engine/engine_config.yaml
@@ -23,15 +23,13 @@ display: 0                    # 0 -> display bar | 1 -> display board
 debug_mode: false              # enable debug output
 
 # MCTS parameters
-num_MCTS_simulations: 300     # number of moves for MCTS to simulate
-num_full_search_sims: 300
-num_fast_search_sims: 50
+num_full_search_sims: 300     # number of moves for MCTS to simulate
 temperature_threshold: 10     # number of moves before MCTS picks moves based only on max visit counts (temp = 1 until threshold, then temp = 0)
 acceptance_threshold: 0.54    # percentage of Arena games a new model must win to be accepted
 c_puct: 1.0                   # hyperparameter to control the degree of exploration in MCTS
 
 # Neural network parameters
-network_type: DEP             # "RES" -> Use resnet | "CNN" -> use convolutional neural network | "DEP" -> deprecated, NN without SENS layer
+network_type: RES             # "RES" -> Use resnet | "CNN" -> use convolutional neural network | "DEP" -> deprecated, NN without SENS layer
 optimizer_type: SGD           # "SGD" -> w/ momentum of 0.9 | "Adam" -> w/ weight decay of 5e-4
 max_length_of_queue: 200000   # max number of moves to train neural network with
 max_num_iterations_in_train_example_history: 4  # max number of iterations to train the neural network with
