--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,10 +1,10 @@
 source "https://rubygems.org"
 
-gem "jekyll", "~> 4.3"
-gem "just-the-docs", "~> 0.7"
+gem "github-pages", "~> 232", group: :jekyll_plugins
 gem "jekyll-feed", "~> 0.12"
 gem "jekyll-sitemap"
 gem "jekyll-seo-tag"
+gem "jekyll-include-cache"
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
