--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: AZ-Go
 description: AlphaZero implementation for 7x7 Go with ResNet-18, Monte Carlo Tree Search, and distributed self-play training
-theme: jekyll-theme-minimal
+remote_theme: just-the-docs/just-the-docs@v0.10.1
 show_downloads: true
 google_analytics:
 
@@ -16,19 +16,32 @@ plugins:
 author: Harrison
 lang: en
 
+# Just the Docs theme configuration
+color_scheme: light
+search_enabled: true
+search:
+  button: true
+  focus_shortcut_key: '/'
+  placeholder_text: Search the documentation
+  
+# Enable copy button for code blocks
+enable_copy_code_button: true
+
 # Navigation
-navigation:
-  - title: Home
-    url: /
-  - title: Installation
-    url: /installation
-  - title: Architecture
-    url: /architecture
-  - title: Training
-    url: /training
-  - title: Usage
-    url: /usage
-  - title: Analysis
-    url: /analysis
-  - title: References
-    url: /references
+nav_enabled: true
+nav_sort: case_sensitive
+
+# Footer
+footer_content: "AZ-Go Documentation - AlphaZero for Go"
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+# External links open in new tab
+aux_links:
+  "GitHub":
+    - "https://github.com/yourusername/AZ-Go"
+  "Notion":
+    - "https://harrisonleath.notion.site/ML-TCU-d58eaa8cde34425fae64342f42cc8f67"
+aux_links_new_tab: true
